:fix :bug: read to rest
