# api/routes/routes_connector.go
@@ -9,11 +9,7 @@ import (
 
 func RoutesConnector(rg *gin.RouterGroup, env config.Config) {
 	connectorController := connector.NewConnectorController(env)
-	authController := connector.NewAuthController(env)
 
-	groupLogin := rg.Group("/auth")
-	groupLogin.POST("/create", authController.GetToken)
-
-	groupConnector := rg.Group("/connector")
-	groupConnector.POST("/read", connectorController.GetEmailFilter)
+	rg.POST("/read", connectorController.GetEmailFilter)
+	rg.POST("/read/full", connectorController.GetEmailFilterFull)
 }
